// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BannerPresenter disables the whole form when on loading state 1`] = `
<div>
  <div
    class="tlp-form-element tlp-form-element-disabled"
  >
    <label
      class="tlp-label tlp-checkbox"
    >
      <input
        type="checkbox"
      />
       
      <translate-stub
        tag="span"
      >
        Activate the banner on the whole platform
      </translate-stub>
    </label>
  </div>
   
  <div>
    <div
      class="tlp-form-element siteadmin-platform-banner-importance"
    >
      <label
        class="tlp-label"
      >
        <translate-stub
          tag="span"
        >
          Importance
        </translate-stub>
         
        <i
          aria-hidden="true"
          class="fas fa-asterisk"
        />
      </label>
       
      <label
        class="tlp-label tlp-radio"
      >
        <input
          class="siteadmin-platform-banner-importance-standard"
          type="radio"
          value="standard"
        />
         
        <translate-stub
          class="tlp-text-info"
          tag="span"
        >
          Standard
        </translate-stub>
      </label>
       
      <label
        class="tlp-label tlp-radio"
      >
        <input
          class="siteadmin-platform-banner-importance-warning"
          type="radio"
          value="warning"
        />
         
        <translate-stub
          class="tlp-text-warning"
          tag="span"
        >
          Warning
        </translate-stub>
      </label>
       
      <label
        class="tlp-label tlp-radio"
      >
        <input
          class="siteadmin-platform-banner-importance-critical"
          type="radio"
          value="critical"
        />
         
        <translate-stub
          class="tlp-text-danger"
          tag="span"
        >
          Critical
        </translate-stub>
      </label>
    </div>
     
    <expiration-date-banner-input-stub
      value=""
    />
     
    <div
      class="tlp-form-element tlp-form-element-disabled"
    >
      <label
        class="tlp-label"
        for="description"
      >
        <translate-stub
          tag="span"
        >
          Message
        </translate-stub>
         
        <i
          aria-hidden="true"
          class="fas fa-asterisk"
        />
      </label>
       
      <textarea
        class="tlp-textarea"
        id="description"
        name="description"
        placeholder="Choose a banner message"
        style="visibility: hidden;"
      />
       
      <p
        class="tlp-text-muted"
        data-current-language="en_US"
        data-msgid="Your message will be condensed to one line"
      >
        Your message will be condensed to one line
      </p>
    </div>
  </div>
   
  <div
    class="tlp-pane-section-submit"
  >
    <button
      class="tlp-button-primary"
      data-tlp-tooltip="Message is mandatory"
      disabled="disabled"
      type="button"
    >
      <i
        class="tlp-button-icon fas fa-fw fa-spin fa-circle-notch"
      />
       
      <span
        data-current-language="en_US"
        data-msgid="Save the configuration"
      >
        Save the configuration
      </span>
    </button>
  </div>
</div>
`;

exports[`BannerPresenter displays a default message and an unchecked switch if banner is not set 1`] = `
<div>
  <div
    class="tlp-form-element"
  >
    <label
      class="tlp-label tlp-checkbox"
    >
      <input
        type="checkbox"
      />
       
      <translate-stub
        tag="span"
      >
        Activate the banner on the whole platform
      </translate-stub>
    </label>
  </div>
   
  <div
    style="display: none;"
  >
    <div
      class="tlp-form-element siteadmin-platform-banner-importance"
    >
      <label
        class="tlp-label"
      >
        <translate-stub
          tag="span"
        >
          Importance
        </translate-stub>
         
        <i
          aria-hidden="true"
          class="fas fa-asterisk"
        />
      </label>
       
      <label
        class="tlp-label tlp-radio"
      >
        <input
          class="siteadmin-platform-banner-importance-standard"
          type="radio"
          value="standard"
        />
         
        <translate-stub
          class="tlp-text-info"
          tag="span"
        >
          Standard
        </translate-stub>
      </label>
       
      <label
        class="tlp-label tlp-radio"
      >
        <input
          class="siteadmin-platform-banner-importance-warning"
          type="radio"
          value="warning"
        />
         
        <translate-stub
          class="tlp-text-warning"
          tag="span"
        >
          Warning
        </translate-stub>
      </label>
       
      <label
        class="tlp-label tlp-radio"
      >
        <input
          class="siteadmin-platform-banner-importance-critical"
          type="radio"
          value="critical"
        />
         
        <translate-stub
          class="tlp-text-danger"
          tag="span"
        >
          Critical
        </translate-stub>
      </label>
    </div>
     
    <expiration-date-banner-input-stub
      value=""
    />
     
    <div
      class="tlp-form-element"
    >
      <label
        class="tlp-label"
        for="description"
      >
        <translate-stub
          tag="span"
        >
          Message
        </translate-stub>
         
        <i
          aria-hidden="true"
          class="fas fa-asterisk"
        />
      </label>
       
      <textarea
        class="tlp-textarea"
        id="description"
        name="description"
        placeholder="Choose a banner message"
        style="visibility: hidden;"
      />
       
      <p
        class="tlp-text-muted"
        data-current-language="en_US"
        data-msgid="Your message will be condensed to one line"
      >
        Your message will be condensed to one line
      </p>
    </div>
  </div>
   
  <div
    class="tlp-pane-section-submit"
  >
    <button
      class="tlp-button-primary"
      data-tlp-tooltip="Message is mandatory"
      type="button"
    >
      <i
        class="tlp-button-icon fas fa-save"
      />
       
      <span
        data-current-language="en_US"
        data-msgid="Save the configuration"
      >
        Save the configuration
      </span>
    </button>
  </div>
</div>
`;

exports[`BannerPresenter displays the banner and a checked switch if banner is set 1`] = `
<div>
  <div
    class="tlp-form-element"
  >
    <label
      class="tlp-label tlp-checkbox"
    >
      <input
        type="checkbox"
      />
       
      <translate-stub
        tag="span"
      >
        Activate the banner on the whole platform
      </translate-stub>
    </label>
  </div>
   
  <div>
    <div
      class="tlp-form-element siteadmin-platform-banner-importance"
    >
      <label
        class="tlp-label"
      >
        <translate-stub
          tag="span"
        >
          Importance
        </translate-stub>
         
        <i
          aria-hidden="true"
          class="fas fa-asterisk"
        />
      </label>
       
      <label
        class="tlp-label tlp-radio"
      >
        <input
          class="siteadmin-platform-banner-importance-standard"
          type="radio"
          value="standard"
        />
         
        <translate-stub
          class="tlp-text-info"
          tag="span"
        >
          Standard
        </translate-stub>
      </label>
       
      <label
        class="tlp-label tlp-radio"
      >
        <input
          class="siteadmin-platform-banner-importance-warning"
          type="radio"
          value="warning"
        />
         
        <translate-stub
          class="tlp-text-warning"
          tag="span"
        >
          Warning
        </translate-stub>
      </label>
       
      <label
        class="tlp-label tlp-radio"
      >
        <input
          class="siteadmin-platform-banner-importance-critical"
          type="radio"
          value="critical"
        />
         
        <translate-stub
          class="tlp-text-danger"
          tag="span"
        >
          Critical
        </translate-stub>
      </label>
    </div>
     
    <expiration-date-banner-input-stub
      value=""
    />
     
    <div
      class="tlp-form-element"
    >
      <label
        class="tlp-label"
        for="description"
      >
        <translate-stub
          tag="span"
        >
          Message
        </translate-stub>
         
        <i
          aria-hidden="true"
          class="fas fa-asterisk"
        />
      </label>
       
      <textarea
        class="tlp-textarea"
        id="description"
        name="description"
        placeholder="Choose a banner message"
        style="visibility: hidden;"
      />
       
      <p
        class="tlp-text-muted"
        data-current-language="en_US"
        data-msgid="Your message will be condensed to one line"
      >
        Your message will be condensed to one line
      </p>
    </div>
  </div>
   
  <div
    class="tlp-pane-section-submit"
  >
    <button
      class="tlp-button-primary"
      data-tlp-tooltip="Message is mandatory"
      type="button"
    >
      <i
        class="tlp-button-icon fas fa-save"
      />
       
      <span
        data-current-language="en_US"
        data-msgid="Save the configuration"
      >
        Save the configuration
      </span>
    </button>
  </div>
</div>
`;
